<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iiit"
    tools:context=".DisplayHome">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D3201E1E">

    </RelativeLayout>


    <TextView
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/indian_institute_of_information_allahabad"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/max_capacity"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/sign_in"
        android:textSize="15sp" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/available_seats"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:layout_marginRight="40dp"
        android:text="@string/sign_up"
        android:textSize="15sp" />

    <Button
        android:id="@+id/admin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/available_filled"
        android:layout_centerInParent="true"
        android:layout_marginTop="350dp"
        android:text="@string/admin"
        android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextClock
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:format12Hour="hh:mm::ss"
                android:text="@string/date_time"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextClock
                android:id="@+id/date_time_am_pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:format12Hour="a"
                android:text="@string/am"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    <TextClock
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout1"
        android:layout_marginLeft="30dp"
        android:format12Hour="MMM dd, yyyy"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <Button
        android:id="@+id/help"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:text="@string/help"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/occupy_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/et_text_background"
        android:text="@string/occupancy_status"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/available_filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/occupy_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:text="@string/available_filled"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/max_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="400dp"
            android:text="@string/max_capacity"
            android:textColor="@color/white"
            android:textSize="20sp" />

    <TextView
        android:id="@+id/available_seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="400dp"
        android:layout_marginRight="40sp"
        android:text="@string/available_seats"
        android:textColor="@color/white"
        android:textSize="20sp" />





</RelativeLayout>