<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iiit"
    tools:context=".Help">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D3201E1E">

    </RelativeLayout>

    <TextView
        android:id="@+id/query1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query1"
        android:textSize="50sp"
        android:layout_marginTop="160sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/query2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query2"
        android:textSize="50sp"
        android:layout_marginTop="300sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/mobilenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:textSize="80sp"
        android:layout_marginTop="400sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/query3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query3"
        android:textSize="50sp"
        android:layout_marginTop="520sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="60sp"
        android:layout_marginTop="630sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</RelativeLayout>